# pyHordcoin

./: .gitignore  LICENSE  README.md  imports.py  mkdocs.yml  pyproject.toml
docs/: index.md  requirements.txt
docs/api/: ConnectedInformation.md  DistributionEntropy.md  MaximiseEntropy.md  intro.md
src/pyHordcoin/: __init__.py  pyHordcoin.py
src/pyHordcoin/julia/: Manifest.toml  Project.toml  ~Manifest.toml.bak~
src/pyhordcoin/: __init__.py  pyhordcoin.py
src/pyhordcoin/julia/: Manifest.toml  Project.toml
tests/: test_imports.py  test_juliaConnectedInformation.py  test_juliaFunctions.py  test_juliaMaximumEntropy.py  test_juliaObjects.py  test_juliaOtherFunctions.py
