[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhordcoin"
version = "1.1.0"
# dynamic = ["version"]
authors = [
  { name="Giulio Tani Raffaelli", email="tani@cs.cas.cz" },
]
description = "A python interface for HORDCOIN."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "numpy>1.26.0",
    "juliacall>0.9.20",
]


[project.urls]
Homepage = "https://github.com/cobragroup/HORDCOIN"
Issues = "https://github.com/cobragroup/HORDCOIN/issues"


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    ]