[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyHordcoin"
version = "1.1.7"
# dynamic = ["version"]
authors = [
  { name="Giulio Tani Raffaelli", email="tani@cs.cas.cz" },
]
description = "A python interface for Hordcoin."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "numpy>=2.0",
    "juliacall>0.9.20",
]


[project.urls]
Homepage = "https://github.com/cobragroup/pyHordcoin"
Issues = "https://github.com/cobragroup/pyHordcoin/issues"


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    ]